[package]
name = "PyCvl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pycvl"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "^0.19"
features = [
    "extension-module",
    "auto-initialize",
]

[dependencies]
numpy = "0.19.0"
cvlcore = { git = "ssh://git@github.com/breadrock1/CVLCore.git" }
